# mdquery

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/eval/: filter.rs  mod.rs  sort.rs
src/output/: mod.rs  table.rs
src/parser/: ast.rs  mod.rs
src/scanner/: mod.rs  reader.rs
src/types/: mod.rs  value.rs
