[package]
name = "mdquery"
version = "0.1.0"
edition = "2024"
description = "A fast CLI for SQL-like queries on markdown frontmatter"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
csv = "1"
gray_matter = "0.2"
ignore = "0.4"
nucleo-matcher = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sqlparser = { version = "0.55", features = ["visitor"] }

[dev-dependencies]
tempfile = "3"
